--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -24,3 +24,7 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.jp-font {
+  font-family: 'Noto Sans JP', 'ui-sans-serif', 'system-ui';
+}
